; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_qgl.c_CapToString.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_qgl.c_CapToString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CapToString.buffer = internal global [1024 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [14 x i8] c"GL_TEXTURE_2D\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"GL_BLEND\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"GL_DEPTH_TEST\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"GL_CULL_FACE\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"GL_CLIP_PLANE0\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"GL_COLOR_ARRAY\00", align 1
@.str.6 = private unnamed_addr constant [23 x i8] c"GL_TEXTURE_COORD_ARRAY\00", align 1
@.str.7 = private unnamed_addr constant [16 x i8] c"GL_VERTEX_ARRAY\00", align 1
@.str.8 = private unnamed_addr constant [14 x i8] c"GL_ALPHA_TEST\00", align 1
@.str.9 = private unnamed_addr constant [16 x i8] c"GL_STENCIL_TEST\00", align 1
@.str.10 = private unnamed_addr constant [5 x i8] c"0x%x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @CapToString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @CapToString(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %15 [
    i32 130, label %5
    i32 136, label %6
    i32 132, label %7
    i32 133, label %8
    i32 135, label %9
    i32 134, label %10
    i32 129, label %11
    i32 128, label %12
    i32 137, label %13
    i32 131, label %14
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %19

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %19

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %19

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %19

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %19

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %19

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %19

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %19

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %19

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %19

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @sprintf(i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @CapToString.buffer, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.10, i64 0, i64 0), i32 %16)
  br label %18

18:                                               ; preds = %15
  store i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @CapToString.buffer, i64 0, i64 0), i8** %2, align 8
  br label %19

19:                                               ; preds = %18, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %20 = load i8*, i8** %2, align 8
  ret i8* %20
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
